k8s项目/prometheus/prometheus-ns-cm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitor
